--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,25 @@
-body{
-    background-color: salmon;
+html,
+body {
+  height: 100%;
+}
+
+.form-signin, .form-register {
+  max-width: 330px;
+  padding: 1rem;
+}
+
+.form-signin .form-floating:focus-within, .form-register {
+  z-index: 2;
+}
+
+.form-signin input[type="email"], .form-register input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"], .form-register input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
