--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,13 +12,21 @@ body {
   z-index: 2;
 }
 
-.form-signin input[type="email"], .form-register input[type="email"] {
+.form-signin input[type="email"], 
+.form-register input[type="email"],
+.form-register input[type="username"],
+.form-register input[type="password"],
+.form-register input[type="name"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"], .form-register input[type="password"] {
+.form-signin input[type="password"],
+.form-register input[type="email"],
+.form-register input[type="username"],
+.form-register input[type="password"],
+.form-register input[type="name"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
